--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <!-- Set the base href -->
     <base href="/">
-    <title>Router Sample</title>
+    <title>TechAspect Library Management System</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../app/css/global.css">
